# camp_inscription

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  style.css
.streamlit/: config.toml
camp_inscription/: app.py  img_processing.py  messages.py  payments.py  person.py  settings.py  utils.py
tests/: test_camp_inscription.py
