[tool.poetry]
name = "camp_inscription"
version = "0.1.0"
description = ""
authors = ["carlosavellaneda8 <carlos.avellaneda8@gmail.com>"]
packages = [{ include = "camp_inscription" }, ]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.10.0"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
