[tool.poetry]
name = "camp_inscription"
version = "0.1.0"
description = ""
authors = ["carlosavellaneda8 <carlos.avellaneda8@gmail.com>"]
packages = [{ include = "camp_inscription" }, ]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
streamlit = "1.12.0"
altair = "4.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
